Corso2/compiling_error.txt
C:\Users\Edo\Desktop\Projects\Esercizi-C++\Corso2\typesofoperator5.cpp: In function 'int main()':
C:\Users\Edo\Desktop\Projects\Esercizi-C++\Corso2\typesofoperator5.cpp:19:5: error: 'A' was not declared in this scope
 if (A) {
     ^
C:\Users\Edo\Desktop\Projects\Esercizi-C++\Corso2\typesofoperator5.cpp:20:3: error: 'some' was not declared in this scope
   some code
   ^~~~
C:\Users\Edo\Desktop\Projects\Esercizi-C++\Corso2\typesofoperator5.cpp:27:10: error: 'B' was not declared in this scope
 else if (B) {
          ^
C:\Users\Edo\Desktop\Projects\Esercizi-C++\Corso2\typesofoperator5.cpp:28:3: error: expected '}' before 'else'
   else if (E) {
   ^~~~
C:\Users\Edo\Desktop\Projects\Esercizi-C++\Corso2\typesofoperator5.cpp:28:12: error: 'E' was not declared in this scope
   else if (E) {
            ^
C:\Users\Edo\Desktop\Projects\Esercizi-C++\Corso2\typesofoperator5.cpp:29:5: error: expected '}' before 'else'
     else if (F){
     ^~~~
C:\Users\Edo\Desktop\Projects\Esercizi-C++\Corso2\typesofoperator5.cpp:29:14: error: 'F' was not declared in this scope
     else if (F){
              ^
C:\Users\Edo\Desktop\Projects\Esercizi-C++\Corso2\typesofoperator5.cpp: At global scope:
C:\Users\Edo\Desktop\Projects\Esercizi-C++\Corso2\typesofoperator5.cpp:33:1: error: expected declaration before '}' token
 }
 ^
